Fix text spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -60,6 +60,7 @@ h1 {
   padding-bottom: 50px;
   letter-spacing: -2px;
   text-align: center;
+  line-height: 1.5;
 }
 h2 {
   font-size: 1.5em;
@@ -104,7 +105,6 @@ ul {
   word-wrap: break-word;
   overflow-wrap: break-word;
   hyphens: auto;
-  padding-bottom: 16px;
 
   @media screen and (min-width: 600px) {
     font-size: 18px;
@@ -114,6 +114,10 @@ ul {
 
 ul {
   padding-left: 24px;
+}
+
+article p {
+  margin-bottom: 20px;
 }
 
 .headline {
@@ -141,7 +145,6 @@ ul {
 
 .main-text {
   font-size: 42px;
-  line-height: 1.5;
 }
 
 .secondary-text,
